--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
     "jest": "^28.1.2",
-    "jest-environment-jsdom": "^28.1.2"
+    "jest-environment-jsdom": "^28.1.2",
+    "prettier": "^2.7.1"
   }
 }
