--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@fontsource/inter": "^4.5.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
     "jest": "^28.1.2",
     "jest-environment-jsdom": "^28.1.2",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.1.4"
   }
 }
