--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,10 @@
 FROM node:alpine
 
 # set working directory
-WORKDIR /frontend
+WORKDIR /app/frontend
 
 # install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
 
 RUN npm install
-
-COPY . ./
