basic ContentBlock functions

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.11",
