--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "editor.formatOnSave": true,
     "python.formatting.provider": "black",
+    "python.formatting.blackArgs": ["--line-length", "100"],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
     },
