--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,12 @@
+asgiref==3.5.2
+click==8.1.3
 Django==4.0.5
 djangorestframework==3.13.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.2
+psycopg2==2.9.3
+pytz==2022.1
+sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.2.0
