Add feedback form with FeedbackBlock
- Adds a feedback form allowing visitors to enter their name and e-mail,
  and optionally their company. Data will be submitted to an API
  (pending).

- Adds a Sentiment component which allows visitors to select how they
  feed about the page.

- Moves EmoticonButton into the Sentiment module since it's unlikely to
  be used elsewhere.

Ideally, I think I'd like to lift the calls to `fetch` out to a parent
component for both Sentiment and SubscriptionForm, but for now this
feels like a nice and simple way of doing what we need.

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "next/core-web-vitals", 
+    "next/core-web-vitals",
     "plugin:react/recommended"
   ],
   "parserOptions": {
@@ -11,5 +11,7 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {}
+  "rules": {
+    "react/react-in-jsx-scope": "off"
+  }
 }
