--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    command: npm run dev
+    command: yarn dev
     volumes:
       - ./frontend:/app/frontend
-      - /app/frontend/node_modules
+      - node_modules:/app/frontend/node_modules
     ports:
       - 3000:3000
 
@@ -56,3 +56,4 @@ services:
 volumes:
   static:
   postgres_data:
+  node_modules:
