--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /app/frontend
 
 # install app dependencies
 COPY package.json ./
-COPY package-lock.json ./
+COPY yarn.lock ./
 
-RUN npm install
+RUN yarn
