--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,17 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:react/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-        "jsx": true
-    },
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/react-in-jsx-scope": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
