--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.3
 coreapi==2.3.3
 coreschema==0.0.4
 Django==4.0.5
+django-cors-headers==3.13.0
 djangorestframework==3.13.1
 drf-nested-routers==0.93.4
 drf-yasg==1.20.0
