--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,6 @@ Django==4.0.5
 django-cors-headers==3.13.0
 djangorestframework==3.13.1
 drf-nested-routers==0.93.4
-drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
@@ -29,3 +28,4 @@ tomli==2.0.1
 typing_extensions==4.2.0
 uritemplate==4.1.1
 urllib3==1.26.9
+whitenoise
