resets actions to only work on deployment branch

--- a/.github/workflows/main_holon-backend.yml
+++ b/.github/workflows/main_holon-backend.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - holon-backend
 on:
   push:
     branches:
-      - 20-create-deployment-branch-with-actions
+      - deployment
   workflow_dispatch:
 
 defaults:
