--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
+    "@mdx-js/loader": "^2.1.2",
+    "@next/mdx": "^12.2.2",
+    "@tailwindcss/typography": "^0.5.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
