--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,5 +18,8 @@ RUN pip install --upgrade pip setuptools wheel
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
+# copy project
+COPY . .
+
 # run entrypoint.sh
 ENTRYPOINT ["/app/backend/docker/entrypoint.sh"]
