maybe line endings?

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,6 +22,9 @@ RUN pip install -r requirements.txt
 
 COPY . .
 RUN chmod +x /app/backend/docker/entrypoint.sh
+RUN sed -i 's/\r$//' /app/backend/docker/entrypoint.sh  && \  
+    chmod +x /app/backend/docker/entrypoint.sh
+
 
 # run entrypoint.sh
 ENTRYPOINT ["/app/backend/docker/entrypoint.sh"]
