--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "next": "12.2.0",
     "react": "18.2.0",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0"
   },
