--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/loader": "^2.1.2",
     "@next/mdx": "^12.2.2",
     "@tailwindcss/typography": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-cookie-consent": "^7.5.0",
@@ -27,6 +28,10 @@
     "@fontsource/inter": "^4.5.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/fetch-mock": "^7.3.5",
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
@@ -37,8 +42,9 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prop-types": "^15.8.1",
-    "react-ga": "^3.3.1",
     "react-cookie-consent": "^7.5.0",
-    "tailwindcss": "^3.1.4"
+    "react-ga": "^3.3.1",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.7.4"
   }
 }
