--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,8 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prop-types": "^15.8.1",
+    "react-ga": "^3.3.1",
+    "react-cookie-consent": "^7.5.0",
     "tailwindcss": "^3.1.4"
   }
 }
