--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,16 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@mdx-js/loader": "^2.1.2",
-    "@next/mdx": "^12.2.2",
+    "@next/mdx": "^12.2.4",
     "@tailwindcss/typography": "^0.5.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-cookie-consent": "^7.5.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "remark-gfm": "^3.0.1",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
     "@fontsource/inter": "^4.5.11",
@@ -37,8 +39,8 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prop-types": "^15.8.1",
-    "react-ga": "^3.3.1",
     "react-cookie-consent": "^7.5.0",
+    "react-ga": "^3.3.1",
     "tailwindcss": "^3.1.4"
   }
 }
