--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -3,5 +3,9 @@
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error"
+  }
 }
