--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -2,10 +2,11 @@
   "plugins": ["@typescript-eslint"],
   "extends": [
     "next/core-web-vitals",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"
+    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-unused-vars": "error"
   }
 }
