--- a/.github/workflows/main_holon-backend.yml
+++ b/.github/workflows/main_holon-backend.yml
@@ -15,7 +15,7 @@ defaults:
     working-directory: ./backend
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,7 +34,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Collect static
+        run: python manage.py collectstatic
+
+      - name: Run tests
+        run: python manage.py test
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
@@ -46,7 +50,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-test
     environment:
       name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
