--- a/.github/workflows/test_django.yml
+++ b/.github/workflows/test_django.yml
@@ -31,4 +31,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: python manage.py test
+        run: python manage.py test --settings=backend.settings.test
