--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@mdx-js/loader": "^2.1.2",
+    "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.2.4",
     "@tailwindcss/typography": "^0.5.4",
     "next": "12.2.0",
