--- a/docker/config/python.example.env
+++ b/docker/config/python.example.env
@@ -3,3 +3,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET_NAME=
 VS_CODE_REMOTE_DEBUG=False
 DEBUG_TOOLBAR=True
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=db
