--- a/src/pytest.circleci.ini
+++ b/src/pytest.circleci.ini
@@ -7,7 +7,7 @@ env =
     SECRET_KEY=this-is-a-secret-key
     MEDIA_PATH=~/repo/src/media/
     STATIC_PATH=~/repo/src/static/
-    DATABASE_NAME=circle_test
-    DATABASE_USER=ubuntu
-    DATABASE_PASSWORD=postgres
-    DATABASE_HOST=localhost
+    DB_NAME=circle_test
+    DB_USER=ubuntu
+    DB_PASSWORD=postgres
+    DB_HOST=localhost
