--- a/src/pytest.local.ini
+++ b/src/pytest.local.ini
@@ -6,11 +6,11 @@ DJANGO_SETTINGS_MODULE=pipit.settings.test
 env =
     ALLOWED_HOSTS=*
     SECRET_KEY=generatesecretkeyhere
-    DATABASE_USER=postgres
-    DATABASE_PASSWORD=postgres
-    DATABASE_NAME=postgres
-    DATABASE_HOST=localhost
-    DATABASE_PORT=8083
+    DB_USER=postgres
+    DB_PASSWORD=postgres
+    DB_NAME=postgres
+    DB_HOST=localhost
+    DB_PORT=8083
     MEDIA_PATH=./media/
     STATIC_PATH=./static/
 markers =
