--- a/docker/files/config/nginx.conf.template
+++ b/docker/files/config/nginx.conf.template
@@ -50,28 +50,28 @@ server {
     }
 
     location / {
-        proxy_set_header Host $host:8081;
+        proxy_set_header Host $host:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://host.docker.internal:3000;
+        proxy_pass ${NEXT_HOST}:3000;
     }
 
     location /_next/webpack-hmr {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass http://host.docker.internal:3000/_next/webpack-hmr;
+        proxy_pass ${NEXT_HOST}:3000/_next/webpack-hmr;
     }
 
     location /_util {
-        proxy_set_header Host $host:8081;
+        proxy_set_header Host $host:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass ${PYTHON_HOST}:8000/wt;
     }
 
     location /wt {
-        proxy_set_header Host $host:8081;
+        proxy_set_header Host $host:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass ${PYTHON_HOST}:8000/wt;
