Fixes devcontainer .env

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -19,5 +19,5 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 
 #FRONTEND
-
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
+NEXT_PUBLIC_WAGTAIL_API_URL=/wt/api/nextjs
