--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,8 +1,12 @@
 #DJANGO
 
 DEBUG=1
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+ALLOWED_HOSTS=localhost, 127.0.0.1, [::1]
 SECRET_KEY=django-insecure-vzl9-zm-@ds!frap*7)zy0ppb5b1zh+#7%aq94jj@yh(@jtf&!
+DJANGO_SETTINGS_MODULE=pipit.settings.local
+
+#Wagtail
+DEBUG_TOOLBAR=False
 
 #Anylogic
 AL_API_KEY=al_api_key
