--- a/frontend/package.json
+++ b/frontend/package.json
@@ -72,6 +72,7 @@
         "jest-next-dynamic": "^1.0.1",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3",
-        "style-loader": "^3.3.1"
+        "style-loader": "^3.3.1",
+        "tailwindcss": "^3.1.8"
     }
 }
