--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "test:ci": "npx jest --ci --runInBand --reporters=default --reporters=jest-junit"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.2",
         "@heroicons/react": "^2.0.11",
         "@types/react": "^18.0.15",
         "classnames": "^2.3.1",
