--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,14 @@
         "i18next": "^21.8.5",
         "next": "12.3.0",
         "next-compose-plugins": "^2.2.1",
+        "parameterize": "^1.0.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "rehype-parse": "^8.0.4",
+        "rehype-stringify": "^9.0.3",
+        "unified": "^10.1.2",
+        "unist-util-visit": "^4.1.1"
     },
     "browserslist": {
         "production": [
