--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,27 +1,30 @@
 #DJANGO
 
-DEBUG=1
-ALLOWED_HOSTS=localhost, 127.0.0.1, [::1]
+DEBUG=True
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SECRET_KEY=django-insecure-vzl9-zm-@ds!frap*7)zy0ppb5b1zh+#7%aq94jj@yh(@jtf&!
-DJANGO_SETTINGS_MODULE=pipit.settings.local
 
-#Wagtail
-DEBUG_TOOLBAR=False
+ALLOWED_HOSTS=localhost
 
 #Anylogic
 AL_API_KEY=al_api_key
 
 #DATABASE
-
 DATABASE=postgres
 PGADMIN_DEFAULT_EMAIL=pgadmin@localtest.me
 PGADMIN_DEFAULT_PASSWORD=mypassword
 DB_USER=postgres
-DB_NAME=holontool
+DB_NAME=postgres
 DB_PASSWORD=postgres
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
 
 #FRONTEND
-WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
-NEXT_PUBLIC_WAGTAIL_API_URL=/wt/api/nextjs
+
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
+VS_CODE_REMOTE_DEBUG=False
+DEBUG_TOOLBAR=True
