--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,23 @@
-{
-    "editor.formatOnSave": true,
-    "python.formatting.provider": "black",
-    "python.formatting.blackArgs": ["--line-length", "100"],
-    "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
-    },
-    "editor.quickSuggestions": {
-        "strings": true
-    },
-    // "files.associations": {
-    //   "*.css": "tailwindcss"
-    // },
-    "eslint.validate": ["javascript"],
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "python.linting.pylintArgs": [
-        "--load-plugins=pylint_django",
-        "--disable=C0115"
-    ],
-    "[python]": {},
-    "python.linting.pylintEnabled": false,
-    "python.linting.enabled": true
-}
+// {
+//     "editor.formatOnSave": true,
+//     "python.formatting.provider": "black",
+//     "python.formatting.blackArgs": ["--line-length", "100"],
+//     "editor.codeActionsOnSave": {
+//         "source.fixAll.eslint": true
+//     },
+//     "editor.quickSuggestions": {
+//         "strings": true
+//     },
+//     "files.associations": {
+//         "*.css": "tailwindcss"
+//     },
+//     "eslint.validate": ["javascript"],
+//     "[javascript]": {
+//         "editor.defaultFormatter": "esbenp.prettier-vscode"
+//     },
+//     "[javascriptreact]": {
+//         "editor.defaultFormatter": "esbenp.prettier-vscode"
+//     },
+//     "python.linting.pylintArgs": ["--load-plugins=pylint_django"],
+//     "[python]": {}
+// }
