--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-WAGTAIL_API_URL=http://python:8000/wt/api/nextjs
+# WAGTAIL_API_URL=http://python:8000/wt/api/nextjs
+WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
 NEXT_PUBLIC_WAGTAIL_API_URL=/wt/api/nextjs
