--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
       "@/utils/*": ["./utils/*"]
     },
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
