Added Media Item placeholder

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "@heroicons/react": "^2.0.11",
         "@types/react": "^18.0.15",
         "classnames": "^2.3.1",
+        "i": "^0.3.7",
         "i18next": "^21.8.5",
         "next": "12.3.0",
         "parameterize": "^1.0.0",
@@ -29,6 +30,7 @@
         "react-cookie-consent": "^8.0.1",
         "react-dom": "18.2.0",
         "react-ga": "^3.3.1",
+        "react-player": "^2.11.0",
         "rehype-parse": "^8.0.4",
         "rehype-stringify": "^9.0.3",
         "unified": "^10.1.2",
