switch branch temp

--- a/.github/workflows/deploy-backend-azure.yml
+++ b/.github/workflows/deploy-backend-azure.yml
@@ -25,7 +25,7 @@ env:
 
 on:
   push:
-    branches: [ "deployment" ]
+    branches: [ "113-wagtail-and-nextjs-are-automatically-deployed" ]
   workflow_dispatch:
 
 permissions:
