--- a/.github/workflows/deploy-backend-azure.yml
+++ b/.github/workflows/deploy-backend-azure.yml
@@ -53,7 +53,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r ./requirements/prod.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
