--- a/.github/workflows/deploy-backend-azure.yml
+++ b/.github/workflows/deploy-backend-azure.yml
@@ -55,6 +55,8 @@ jobs:
           source venv/bin/activate
       - name: Install dependencies
         run: pip install -r ./requirements/prod.txt
+      - name: Generate requirements.txt for azure
+        run: pip freeze > requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
