--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -41,4 +41,4 @@ RUN chown -R app:app $APP_HOME
 USER app
 
 # Run entrypoint.prod.sh
-ENTRYPOINT ["/home/app/web/entrypoint.prod.sh", "uwsgi"]
+ENTRYPOINT ["sh", "docker-entrypoint.sh", "uwsgi"]
