--- a/docker/files/config/nginx.conf.template
+++ b/docker/files/config/nginx.conf.template
@@ -3,12 +3,7 @@ server {
     listen [::]:80 default_server;
     proxy_read_timeout 120s;
 
-    server_name holontool.nl.test _;
-
-    # do not touch - uncommented when enable_ssl.sh is used
-    #mkcert listen 443 ssl;
-    #mkcert ssl_certificate /etc/nginx/certs/cert.pem;
-    #mkcert ssl_certificate_key /etc/nginx/certs/cert-key.pem;
+    server_name holontool.nl _;
 
     client_max_body_size 128M;
 
@@ -46,6 +41,7 @@ server {
 
     location /wt/static/ {
         expires 30d;
+        autoindex off;
         alias /app/static/;
     }
 
