--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
         "postcss": "^8.4.14",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3",
+        "storybook-addon-next": "^1.6.9",
         "style-loader": "^3.3.1",
         "tailwindcss": "^3.1.8",
         "tsconfig-paths-webpack-plugin": "^4.0.0"
