--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -36,3 +36,5 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+      env:
+        DJANGO_SETTINGS_MODULE: pipit.settings.test
