--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -14,18 +14,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_HOST: localhost # default host value for the database
-      POSTGRES_DB: djtesting
-      POSTGRES_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: localhost # default host value for the database
+      DB_NAME: djtesting
+      DB_PORT: 5432
     services:
       postgres_main:
         image: postgres:12
         env:
-          POSTGRES_USER: ${{ env.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ env.POSTGRES_DB }}
+          POSTGRES_USER: ${{ env.DB_USER }}
+          POSTGRES_PASSWORD: ${{ env.DB_PASSWORD }}
+          POSTGRES_DB: ${{ env.DB_NAME }}
         ports:
           - 5432:5432
         options: >-
@@ -48,7 +48,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/test.txt
-      - name: Lint with Flake8
+      - name: Lint with Black
         uses: psf/black@stable
         with:
           options: "--check --verbose"
