--- a/src/pytest.local.ini
+++ b/src/pytest.local.ini
@@ -9,8 +9,8 @@ env =
     DB_USER=postgres
     DB_PASSWORD=postgres
     DB_NAME=postgres
-    DB_HOST=localhost
-    DB_PORT=8083
+    DB_HOST=db
+    DB_PORT=5432
     MEDIA_PATH=./media/
     STATIC_PATH=./static/
 markers =
