fixes frontend quality file

--- a/.github/workflows/nextjs-code-quality.yml
+++ b/.github/workflows/nextjs-code-quality.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Next CI
 
 on:
   push:
@@ -13,7 +13,7 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
-      steps:
+    steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
