--- a/.github/workflows/nextjs-code-quality.yml
+++ b/.github/workflows/nextjs-code-quality.yml
@@ -19,5 +19,5 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm test
-      - run: npm lint
+      - run: npm run test:ci
+      - run: npm run lint
