--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
         "new": "node cli/bin.js new",
         "new:container": "node cli/bin.js new --container",
         "test": "jest --watch",
-        "test:ci": "npx jest --ci --runInBand --reporters=default --reporters=jest-junit"
+        "test:ci": "npx jest --ci --runInBand --reporters=default --reporters=jest-junit",
+        "lint": "next lint"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.2",
@@ -69,6 +70,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.2.0",
+        "@typescript-eslint/eslint-plugin": "^5.41.0",
         "autoprefixer": "^10.4.7",
         "babel-loader": "^8.2.5",
         "babel-plugin-transform-dynamic-import": "^2.1.0",
