--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,6 +82,8 @@
         "husky": "^8.0.1",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^28.1.0",
+        "jest-environment-jsdom": "^29.2.2",
+        "jest-fetch-mock": "^3.0.3",
         "jest-junit": "^13.2.0",
         "jest-next-dynamic": "^1.0.1",
         "postcss": "^8.4.14",
