--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
         "@heroicons/react": "^2.0.11",
         "@types/react": "^18.0.15",
         "classnames": "^2.3.1",
+        "es-cookie": "^1.4.0",
         "i": "^0.3.7",
         "i18next": "^21.8.5",
+        "js-cookie": "^3.0.1",
         "next": "12.3.0",
         "parameterize": "^1.0.0",
         "prop-types": "^15.8.1",
