Add navigation to every page response

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,8 @@
       "@/containers/*": ["./containers/*"],
       "@/pages/*": ["./pages/*"],
       "@/api/*": ["./api/*"],
-      "@/utils/*": ["./utils/*"]
+      "@/utils/*": ["./utils/*"],
+      "@/public/*": ["./public/*"]
     },
     "target": "es5",
     "downlevelIteration": true,
