Added autoslug for the snippets

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -14,7 +14,7 @@ DATABASE=postgres
 PGADMIN_DEFAULT_EMAIL=pgadmin@localtest.me
 PGADMIN_DEFAULT_PASSWORD=mypassword
 DB_USER=postgres
-DB_NAME=postgres
+DB_NAME=holontool
 DB_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
