--- a/src/holon/services/etm_scaling.config.yml
+++ b/src/holon/services/etm_scaling.config.yml
@@ -26,24 +26,11 @@ name_of_holon_input_buildings_solar_panels: # deze HOLON-slidernaam moet nog wor
     data: value
     etm_key: buildings_solar_pv_solar_radiation_market_penetration
 
-# NOTE: these two sliders depend on the addition of a balancer in the etm_service
-# name_of_holon_input_eletric_trucks: # deze HOLON-slidernaam moet nog worden geüpdatet, is nu nog onbekend
-#   value:
-#     type: input
-#     data: value
-#     etm_key: transport_truck_using_electricity_share
-
-# the diesel trucks slider also has to be set, otherwise the scenario will not work right?
-# the diesel trucks have to be set to 1.0 - name_of_holon_input_eletric_trucks
-# name_of_holon_input_eletric_trucks: # deze HOLON-slidernaam moet nog worden geüpdatet, is nu nog onbekend
-#   value:
-#     type: input
-#     data: value
-#     etm_key: transport_truck_using_diesel_mix_share
-#   conversion: subtract # is this supported?
-#   convert_with_value:
-#     type: static
-#     data: 1.0
+name_of_holon_input_eletric_trucks:
+  value:
+    type: input
+    data: value
+    etm_key: transport_truck_using_electricity_share
 
 # hourly profile electric trucks
 totalEHGVHourlyChargingProfile_kWh:
