--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,9 @@
         "@heroicons/react": "^2.0.11",
         "@types/react": "^18.0.15",
         "classnames": "^2.3.1",
+        "es-cookie": "^1.4.0",
         "i18next": "^21.8.5",
-        "js-cookie": "^3.0.1",
+        "lodash.debounce": "^4.0.8",
         "next": "12.3.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
