--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
         "classnames": "^2.3.1",
         "es-cookie": "^1.4.0",
         "i18next": "^21.8.5",
-        "lodash.debounce": "^4.0.8",
+        "lodash": "^4.17.21",
         "next": "12.3.0",
         "prop-types": "^15.8.1",
         "react": "18.2.0",
