--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -48,6 +48,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/test.txt
+          cd /holon/services
+          cloudclient_init -tf . --get-api-key
       - name: Lint with Black
         uses: psf/black@stable
         with:
