--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/test.txt
-          cd /holon/services
+          cd holon/services
           cloudclient_init -tf . --get-api-key
       - name: Lint with Black
         uses: psf/black@stable
