remove some more erata from interfaces, almost there

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,8 @@
                 "--noreload",
                 "--nothreading"
             ],
-            "django": true
+            "django": true,
+            "justMyCode": false
         }
     ]
 }
