Add missing packages to production environment

--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -20,7 +20,7 @@ ENV PYTHONUNBUFFERED 1
 
 # Install server packages
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev libffi-dev openssl-dev \
+    && apk add postgresql-dev make automake gcc g++ subversion python3-dev musl-dev libffi-dev openssl-dev \
     && apk add jpeg-dev libwebp-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev libxml2-dev libxslt-dev libxml2 git
 
 # Install Python packages
