--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,3 @@
 WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
-NEXT_PUBLIC_WAGTAIL_API_URL=/wt/api/nextjs
+NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
 NEXT_PUBLIC_BASE_URL=http://localhost:8000/
