Add ImageMagick to the Production Dockerfile

--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -23,6 +23,10 @@ RUN apk update \
     && apk add postgresql-dev make automake gcc g++ subversion python3-dev musl-dev libffi-dev openssl-dev \
     && apk add jpeg-dev libwebp-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev libxml2-dev libxslt-dev libxml2 git
 
+# Install ImageMagick
+RUN apk add --no-cache imagemagick && \
+    apk add --no-cache imagemagick-dev
+
 # Install Python packages
 RUN pip install pip --upgrade
 ADD requirements $APP_HOME/requirements
