more commits than mabijkerk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,7 @@
     },
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    },
+    "spellright.language": ["nl"],
+    "spellright.documentTypes": ["markdown", "latex", "plaintext"]
 }
