implements custom method fields, generic exclude fields and wildcard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,6 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "spellright.language": ["nl"],
+    "spellright.language": ["en", "nl"],
     "spellright.documentTypes": ["markdown", "latex", "plaintext"]
 }
