refactor meta program 'update datamodel series' to seperate .py.j2 files for readability

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
                 "esbenp.prettier-vscode",
                 "dbaeumer.vscode-eslint",
                 "wix.vscode-import-cost",
-                "bradlc.vscode-tailwindcss"
+                "bradlc.vscode-tailwindcss",
+                "samuelcolvin.jinjahtml"
             ]
         }
     },
