add quality checks to acceptance and production merges

--- a/.github/workflows/django-code-quality.yml
+++ b/.github/workflows/django-code-quality.yml
@@ -2,9 +2,9 @@ name: Django CI
 
 on:
   push:
-    branches: ["main", "deployment"]
+    branches: ["main", "acceptance", "production"]
   pull_request:
-    branches: ["main", "deployment"]
+    branches: ["main", "acceptance", "production"]
 
 defaults:
   run:
